--- a/src/assets/css/v3.style.css
+++ b/src/assets/css/v3.style.css
@@ -25,51 +25,19 @@ a {
 }
 
 /* Common */
-
+.social {
+  background-color: black;
+  margin-left: 10px;
+  border-radius: 50px;
+  border: 1px solid gray;
+  height: 50px;
+  width: 50px;
+}
 .section-heading {
   padding: 1.5rem;
   font-size: 60px;
   font-weight: 500;
 }
-
-/* Section 1 - Landing Page */
-
-.nav-link:hover {
-  border-bottom: 1px solid white;
-}
-
-.short-hr {
-  background-color: white;
-  width: 10%;
-}
-
-.typed-cursor {
-  opacity: 0;
-}
-
-.nav-item {
-  padding-left: 50px;
-  font-size: 1em;
-}
-
-/* Section 3 -  Skills*/
-
-.s3 {
-  background: linear-gradient(to top, var(--trans-primary) 0%, var(--dark) 93%, rgb(0, 0, 0) 100%);
-  min-height: 100vh;
-}
-
-.s6 {
-  background: linear-gradient(
-    to bottom,
-    var(--trans-primary) 0%,
-    var(--dark) 93%,
-    rgb(0, 0, 0) 100%
-  );
-  min-height: 100vh;
-}
-
-
 
 .self {
   filter: grayscale(60%);
@@ -79,28 +47,16 @@ a {
   font-size: 2rem;
 }
 
-/* Section 4 - Contact */
-.s4 {
-  box-shadow: 0 0 125px 125px black;
-}
 
-.contact-text {
-  font-size: 4em;
-  font-weight: bold;
-}
 
-.linkedin,
-.email {
-  max-width: 10%;
-}
 
-/* Footer */
-.s5 {
-  text-align: center;
-  background-color: #2d2d2d;
-  margin: 0px;
-  height: 10vh;
-}
+
+
+
+
+
+
+
 
 /* Loader */
 
