--- a/src/assets/css/v3.style.css
+++ b/src/assets/css/v3.style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: #282828 !important;
+  background-color: black !important;
   color: #fefefe !important;
   margin: 0px;
   padding: 0px;
@@ -37,26 +37,11 @@ a {
   padding: 1.5rem;
   font-size: 60px;
   font-weight: 500;
+  background: url("../img/hj.png");
+  background-size: 150px 40px;
+  background-repeat: no-repeat;
+  background-position: left 30px bottom 20px;
 }
-
-.self {
-  filter: grayscale(60%);
-}
-
-.description-text {
-  font-size: 2rem;
-}
-
-
-
-
-
-
-
-
-
-
-
 
 /* Loader */
 
