--- a/src/assets/css/v3.style.css
+++ b/src/assets/css/v3.style.css
@@ -9,7 +9,9 @@
   --trans-tertiary: rgba(217, 35, 68, 0.315);
   --trans-blue: rgba(28, 49, 166, 0.411);
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: black !important;
   color: #fefefe !important;
@@ -35,12 +37,17 @@ a {
 }
 .section-heading {
   padding: 1.5rem;
+  margin-top: 2rem;
   font-size: 60px;
   font-weight: 500;
   background: url("../img/hj.png");
   background-size: 150px 40px;
   background-repeat: no-repeat;
   background-position: left 30px bottom 20px;
+}
+
+.navbar-dark .navbar-toggler {
+  border: 0px !important;
 }
 
 /* Loader */
